--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -49,6 +49,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6aae4761",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def set_old_status(df_offers):\n",
+    "    df_offers[\"Status\"] = df_offers.apply(\n",
+    "        lambda row: \"old\" if row[\"Status\"] == \"active\" and pd.to_datetime(row[\"Created Time\"]).date() < THIRTY_DAYS_AGO else row[\"Status\"],\n",
+    "        axis=1\n",
+    "    )\n",
+    "    return df_offers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3916ca60",
    "metadata": {},
    "outputs": [],
@@ -225,6 +240,16 @@
     ")\n",
     "\n",
     "df_offers = df_offers.drop(\"Link to Note\", axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a9f2277",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_offers = set_old_status(df_offers)"
    ]
   },
   {
