Handle no status error

--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -154,18 +154,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = [\n",
-    "    {\n",
-    "        \"Name\": offer[\"properties\"][\"Offer name\"][\"title\"][0][\"plain_text\"],\n",
-    "        \"Created Time\": offer[\"created_time\"],\n",
-    "        \"Last Edited Time\": offer[\"last_edited_time\"],\n",
-    "        \"Status\": offer[\"properties\"][\"Status\"][\"select\"][\"name\"],\n",
-    "        \"Company\": offer[\"properties\"][\"Company\"][\"select\"][\"name\"],\n",
-    "        \"Link to Offer\": offer[\"properties\"][\"Link to offer\"][\"url\"],\n",
-    "        \"Link to Note\": offer[\"url\"],\n",
-    "    }\n",
-    "    for offer in notion_database[\"results\"]\n",
-    "]"
+    "try:\n",
+    "    data = [\n",
+    "        {\n",
+    "            \"Name\": offer[\"properties\"][\"Offer name\"][\"title\"][0][\"plain_text\"],\n",
+    "            \"Created Time\": offer[\"created_time\"],\n",
+    "            \"Last Edited Time\": offer[\"last_edited_time\"],\n",
+    "            \"Status\": offer[\"properties\"][\"Status\"][\"select\"][\"name\"],\n",
+    "            \"Company\": offer[\"properties\"][\"Company\"][\"select\"][\"name\"],\n",
+    "            \"Link to Offer\": offer[\"properties\"][\"Link to offer\"][\"url\"],\n",
+    "            \"Link to Note\": offer[\"url\"],\n",
+    "        }\n",
+    "        for offer in notion_database[\"results\"]\n",
+    "    ]\n",
+    "except TypeError as e:\n",
+    "    if str(e) == \"'NoneType' object is not subscriptable\":\n",
+    "        print(\"Probably some offer don't have assigned status\")\n",
+    "    else:\n",
+    "        print(\"Unknown Type Error\", e)\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
